Made small changes. Logout is not working.

--- a/app/templates/app-layout/home.tpl.html
+++ b/app/templates/app-layout/home.tpl.html
@@ -2,6 +2,6 @@
 <p>All User's Recipes to be Repeated</p>
 <div class="recipe-card">Recipe</div>
 
-
+<a ng-click="logmeout()">Logout</a>
 
 <!-- Title: What's On The Menu?-->
