changes made to login

--- a/app/templates/app-layout/home.tpl.html
+++ b/app/templates/app-layout/home.tpl.html
@@ -1,5 +1,5 @@
 <h1>User Dashboard</h1>
-<p>All User's Recipes to be Repeated</p>
+<p>{{message}} All User's Recipes to be Repeated</p>
 <div class="recipe-card">Recipe</div>
 
 <a ng-click="logmeout()">Logout</a>
