--- a/app/templates/app-layout/login.tpl.html
+++ b/app/templates/app-layout/login.tpl.html
@@ -2,6 +2,6 @@
   <input placeholder="email" ng-model="user.email">
   <input placeholder="password" ng-model="user.password">
   <p>|
-    <a>Login</a>
+    <button ng-click="login(user)">login</button>
   </p>
 </form>
