--- a/app/templates/app-layout/home.tpl.html
+++ b/app/templates/app-layout/home.tpl.html
@@ -1,6 +1,5 @@
 <div class="home">
 
-  <h5>Flour Power</h5>
 
   <div>
 
@@ -13,7 +12,7 @@
 
   <div>
 
-    <button ng-click="register(user)">Get Started</button>
+    <button ng-click="register(user)">Get Started</button> |
     <button ng-click="login(user)">Login</button>
 
   </div>
