--- a/app/templates/app-layout/layout.tpl.html
+++ b/app/templates/app-layout/layout.tpl.html
@@ -1,15 +1,12 @@
 <nav class="top-bar" data-topbar role="navigation">
-  <ul class="title-area">
-    <li class="logo">
-      <h1><a href="#/">Flour Power</a></h1>
-    </li>
-  </ul>
-  <section class="top-bar-section">
-    <ul class="right">
-      <li><a href="#/dashboard">Dashboard</a></li>
+  <section class="title-area">
+      <a id="logo" href="#/">Flour Power</a>
+  </section>
+  
+  <section class="right">
+      <a href="#/dashboard">Dashboard</a> |
    <!--    <li><a href="#/add">Add Recipe</a></li> -->
-      <li><a href="#/">Logout</a></li>
-    </ul>
+      <a href="#/">Logout</a>
   </section>
 </nav>
 
