--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,39 @@
-// Put any @imports here
-// See Readme for a list of supported ones
 @import "foundation";
      
 @include foundation-everything;
 
+
 body {
-  color: purple;
-  background: #e2ebf3;
+
+  background-image: url('../photos/pink.png'); 
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+nav {
+  border-bottom: 2px solid blue;
+  opacity: 0.9;
+} 
+.top-bar {
+  background: transparent;
+  height: 4em;
+  section {
+    display: inline-block;
+  }
+
+  .titl-area {
+    float: left;
+  }
+  
+  .right{
+    float: right;
+  }
+}
+
+.home {
+  border: 1px solid black;
+  border-radius: 4px;
+  width: 50%;
+  margin: 20% auto 20%;
+  padding: 30px;
 }
