Categories on dashboard

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -3067,6 +3067,7 @@ table.hover tr:nth-of-type(even):hover {
     float: right; } }
 
 body {
+  color: white;
   background-image: url("../photos/pink.png");
   background-size: cover;
   background-repeat: no-repeat;
