--- a/app/templates/app-user/dashboard.tpl.html
+++ b/app/templates/app-user/dashboard.tpl.html
@@ -3,10 +3,10 @@
   <h1>{{ vm.message }}</h1>
 
 
-<!--   <ul class="recipe-index" ng.repeat="recipe in vm.recipes">
-    <li>{{ recipe.name }}</li>
-    <li>{{ recipe.photo }}</li>
-  </ul> -->
+  <ul class="recipe-index" ng-repeat="stuff in vm.recipes">
+    <li>{{ stuff.category }}</li>
+    
+  </ul>
 
 <!--   <button ng-click="newRecipe">New Recipe</button> -->
   
