--- a/app/templates/app-user/dashboard.tpl.html
+++ b/app/templates/app-user/dashboard.tpl.html
@@ -4,7 +4,7 @@
 
 
   <ul class="collection-index" ng-repeat="category in collection track by vm.category.id">
-    <li>{{ collection.category }}</li>
+    <li>{{ category.category }}</li>
     <li>{{ collection.category.singleRecipe }}</li>
 
 <!--     <li>{{stuff.recipes}}</li> -->
