--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,7 +21,7 @@ nav {
     display: inline-block;
   }
 
-  .titl-area {
+  .title-area {
     float: left;
   }
   
@@ -36,4 +36,9 @@ nav {
   width: 50%;
   margin: 20% auto 20%;
   padding: 30px;
+}
+
+.register {
+  width: 800px;
+  margin: 25px auto;
 }
