--- a/app/templates/app-user/dashboard.tpl.html
+++ b/app/templates/app-user/dashboard.tpl.html
@@ -2,6 +2,25 @@
   
   <h1>{{ vm.message }}</h1>
 
+  <ul>
+    <li ng-repeat="recipe in vm.recipes">
+      {{ recipe.name }}
+      <h3>Categories</h3>
+      <ul>
+        <li ng-repeat="category in recipe.categories">
+          {{ category }}
+        </li>
+      </ul>
+      <h3>Ingredients</h3>
+      <ul>
+        <li ng-repeat="ingredient in recipe.ingredients">
+          {{ ingredient.name }}
+        </li>
+      </ul>
+
+    </li>
+  </ul>
+
 
   <ul class="collection-index" ng-repeat="category in collection track by vm.category.id">
     <li>{{ category.category }}</li>
