--- a/app/templates/app-user/dashboard.tpl.html
+++ b/app/templates/app-user/dashboard.tpl.html
@@ -5,7 +5,11 @@
   <ul>
     <li ng-repeat="recipe in vm.recipes">
       {{ recipe.name }}
-      <h3>Categories</h3>
+      <img ng-if="recipe.source_image_url" ng-src="{{ recipe.source_image_url }}" height="100" width="100">
+    <img ng-if="!recipe.source_image_url" src="http://placehold.it/100x100">
+
+
+<!--       <h3>Categories</h3>
       <ul>
         <li ng-repeat="category in recipe.categories">
           {{ category }}
@@ -16,7 +20,7 @@
         <li ng-repeat="ingredient in recipe.ingredients">
           {{ ingredient.name }}
         </li>
-      </ul>
+      </ul> -->
 
     </li>
   </ul>
