Adding categories to layout

--- a/app/templates/app-layout/layout.tpl.html
+++ b/app/templates/app-layout/layout.tpl.html
@@ -11,3 +11,14 @@
 </nav>
 
 <section class="container" ui-view>look</section>
+
+<footer>
+  <ul>
+    <li>Drinks</li>
+    <li>Appetizers</li>
+    <li>Main Courses</li>
+    <li>Desserts</li>
+    <li>Salads and Soups</li>
+    <li>Side Dishes</li>
+  </ul>
+</footer>
