In the middle of renaming and moving things around

--- a/app/templates/app-layout/layout.tpl.html
+++ b/app/templates/app-layout/layout.tpl.html
@@ -10,15 +10,5 @@
   </section>
 </nav>
 
-<section class="container" ui-view>look</section>
+<section class="container" ui-view></section>
 
-<footer>
-  <ul>
-    <li>Drinks</li>
-    <li>Appetizers</li>
-    <li>Main Courses</li>
-    <li>Desserts</li>
-    <li>Salads and Soups</li>
-    <li>Side Dishes</li>
-  </ul>
-</footer>
