--- a/app/templates/app-recipes/category.tpl.html
+++ b/app/templates/app-recipes/category.tpl.html
@@ -1,5 +1,5 @@
 <ul>
-  <li ng-repeat="recipe in vm.recipes">
+  <li ng-repeat="recipe in vm.catRecipes">
     {{ recipe.name }}
     <img ng-if="recipe.source_image_url" ng-src="{{ recipe.source_image_url }}" height="100" width="100">
   <img ng-if="!recipe.source_image_url" src="http://placehold.it/100x100">
