single recipe pages up

--- a/app/templates/app-recipes/recipe-single.tpl.html
+++ b/app/templates/app-recipes/recipe-single.tpl.html
@@ -1,10 +1,10 @@
-<h3>Single Recipe</h3>
+<h3>{{ vm.recipe.name }}</h3>
 
-<ul>
+<!-- <ul>
   <li ng-repeat="recipe in vm.recipe">
     {{ recipe.name }}
     <img ng-if="recipe.source_image_url" ng-src="{{ recipe.source_image_url }}" height="100" width="100">
   <img ng-if="!recipe.source_image_url" src="http://placehold.it/100x100">
 
   </li>
-</ul>
+</ul> -->
