--- a/app/templates/app-layout/layout.tpl.html
+++ b/app/templates/app-layout/layout.tpl.html
@@ -12,3 +12,11 @@
 
 <section class="container" ui-view></section>
 
+<footer>
+  <ul>
+    <li ng-repeat="category in vm.categories"> 
+    <a href="#/category/{{ category.id }}">*{{ category.name }}</a>
+    </li>
+  </ul>
+</footer>
+
