--- a/app/templates/app-layout/layout.tpl.html
+++ b/app/templates/app-layout/layout.tpl.html
@@ -5,7 +5,7 @@
   
   <section class="right">
       <a href="#/dashboard">Dashboard</a> |
-   <!--    <li><a href="#/add">Add Recipe</a></li> -->
+      <a href="#/add">Add Recipe</a> |
       <a href="#/">Logout</a>
   </section>
 </nav>
