Added styling to add recipe form

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -3097,4 +3097,8 @@ nav {
   width: 800px;
   margin: 25px auto; }
 
+.addRecipeForm {
+  width: 800px;
+  margin: auto; }
+
 /*# sourceMappingURL=main.css.map */
