--- a/app/templates/app-recipes/category.tpl.html
+++ b/app/templates/app-recipes/category.tpl.html
@@ -1,8 +1,9 @@
-<ul>
-  <li ng-repeat="recipe in vm.catRecipes">
-    {{ recipe.name }}
-    <img ng-if="recipe.source_image_url" ng-src="{{ recipe.source_image_url }}" height="100" width="100">
-    <img ng-if="!recipe.source_image_url" src="http://placehold.it/100x100">
-
-  </li>
-</ul>
+<div class="row align-center">
+  <div class="recipe small-10 medium-4 large-3 columns" ng-repeat="recipe in vm.catRecipes">
+    <img class="thumbnail" ng-if="recipe.source_image_url" ng-src="{{ recipe.source_image_url }}" height="100" width="100">
+    <img class="thumbnail" ng-if="!recipe.source_image_url" src="http://placehold.it/100x100">
+    <p class="title">
+      <a href="#/recipes/{{ recipe.id }}">{{ recipe.name }}</a>
+    </p>
+  </div>
+</div>
