--- a/app/css/main.css
+++ b/app/css/main.css
@@ -3332,10 +3332,14 @@ nav {
     float: right; }
 
 .home {
-  border: 1px solid black;
-  border-radius: 4px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  border: 2px solid white;
+  border-radius: 5px;
   width: 50%;
-  margin: 20% auto 20%;
   padding: 30px; }
 
 .register {
@@ -3348,10 +3352,11 @@ nav {
   .row .recipe {
     margin: 10px;
     border: 2px solid white;
-    border-radius: 4px; }
+    border-radius: 5px; }
     .row .recipe .title {
       text-align: center; }
     .row .recipe .thumbnail {
+      width: 100%;
       margin-top: 10px;
       align: center; }
 
