--- a/app/templates/app-user/dashboard.tpl.html
+++ b/app/templates/app-user/dashboard.tpl.html
@@ -9,10 +9,11 @@
         <a href="#/recipes/{{ recipe.id }}">{{ recipe.name }}</a>
       </p>
     </div>
-      
   </div>
 
-<footer>
+</div>
+
+<footer class"categories">
   <ul>
     <li ng-repeat="category in vm.categories"> 
     <a href="#/category/{{ category.id }}">{{ category.name }}</a>
