--- a/app/templates/app-recipes/recipe-single.tpl.html
+++ b/app/templates/app-recipes/recipe-single.tpl.html
@@ -1,28 +1,33 @@
+<div class="singleRecipe">
 
-<h3>{{ vm.recipe.name}}</h3>
 
-<img ng-if="vm.recipe.source_image_url" ng-src="{{ vm.recipe.source_image_url }}" height="100" width="100">
-<img ng-if="!vm.recipe.source_image_url" src="http://placehold.it/100x100">
 
-<div class="row align-middle">
-  <!-- Populating Ingredients from IngredientsController -->
-   <div claas="ingredients shrink columns" ng-controller="IngredientsController as ingredients">
-    <h4>Ingredients</h4>
-    <div ng-repeat="ingredient in ingredients">
-      {{ ingredient.amount }} {{ ingredient.unit }} {{ ingredient.name }}
-    </div>
-   </div>
+  <div id="mainPhoto" style="background-image: url( {{ vm.recipe.source_image_url }} ) ">
+     <h3>{{ vm.recipe.name}}</h3>
+  </div>
+  
+    <div id="recipe"class="row">
+      <!-- Populating Ingredients from IngredientsController -->
+       <div class="ingredients shrink columns" ng-controller="IngredientsController as ingredients">
+        <h4>Ingredients</h4>
+        <p ng-repeat="ingredient in ingredients">
+          {{ ingredient.amount }} {{ ingredient.unit }} {{ ingredient.name }}
+        </p>
+       </div>
 
-  <!-- Populating Directions from DirectionsController -->
-   <div claas="directions columns" ng-controller="DirectionsController as directions">
-    <h4>Directions</h4>
-    <div ng-repeat="directions in directions">
-      {{ directions }}</div>
-   </div>
+      <!-- Populating Directions from DirectionsController -->
+       <div class="directions columns" ng-controller="DirectionsController as directions">
+        <h4>Directions</h4>
+        <p ng-repeat="directions in directions">
+          {{ directions }}
+        </p>
+       </div>
 
- </div>
-<!-- In console, but not rendering -->
-<footer >
+     </div>
+
+</div>
+
+<footer class"categories">
   <ul ng-controller="DashboardController">
     <li ng-repeat="category in vm.categories"> 
     <a href="#/category/{{ category.id }}">{{ category.name }}</a>
