--- a/app/templates/app-layout/home.tpl.html
+++ b/app/templates/app-layout/home.tpl.html
@@ -1,4 +1,6 @@
+
 <div class="home">
+  <h1 class="title">FlourPower</h1>
   <form ng-submit="login(user)">
     <input type="text" placeholder="email" ng-model="user.email">
     <input placeholder="password" ng-model="user.password" type="password">
