--- a/app/templates/app-layout/layout.tpl.html
+++ b/app/templates/app-layout/layout.tpl.html
@@ -2,6 +2,12 @@
   <section class="title-area">
       <a id="logo" href="#/">Flour Power</a>
   </section>
+
+  <div class="input-group search-bar">
+    <form ng-submit="search(query)">
+      <input type="text" ng-model="query" placeholder="Search For Recipe Here"/>
+    </form>
+  </div>
   
   <section class="right">
       <a href="#/dashboard">Dashboard</a> |
